--- a/src/dune
+++ b/src/dune
@@ -1,6 +1,6 @@
 (library
  (name nonempty_list)
  (public_name nonempty-list)
- (libraries core reversed-list)
+ (libraries base reversed-list)
  (preprocess
   (pps ppx_jane)))
