--- a/src/dune
+++ b/src/dune
@@ -3,4 +3,4 @@
  (public_name nonempty-list)
  (libraries base reversed-list)
  (preprocess
-  (pps ppx_jane)))
+  (pps ppx_compare ppx_hash ppx_sexp_conv ppx_sexp_value)))
