--- a/nonempty-list.opam
+++ b/nonempty-list.opam
@@ -12,6 +12,7 @@ depends: [
   "dune" {>= "3.15"}
   "ocaml" {>= "5.1"}
   "base" {>= "v0.17" & < "v0.18"}
+  "base_quickcheck" {>= "v0.17" & < "v0.18"}
   "ppx_compare" {>= "v0.17" & < "v0.18"}
   "ppx_hash" {>= "v0.17" & < "v0.18"}
   "ppx_sexp_conv" {>= "v0.17" & < "v0.18"}
