--- a/nonempty-list.opam
+++ b/nonempty-list.opam
@@ -11,6 +11,7 @@ bug-reports: "https://github.com/mbarbin/nonempty-list/issues"
 depends: [
   "dune" {>= "3.16"}
   "ocaml" {>= "5.2"}
+  "ocamlformat" {with-dev-setup & = "0.26.2"}
   "base" {>= "v0.17" & < "v0.18"}
   "base_quickcheck" {>= "v0.17" & < "v0.18"}
   "ppx_compare" {>= "v0.17" & < "v0.18"}
