--- a/nonempty-list.opam
+++ b/nonempty-list.opam
@@ -20,6 +20,7 @@ depends: [
   "ppx_sexp_value" {>= "v0.17" & < "v0.18"}
   "ppxlib" {>= "0.33"}
   "reversed-list" {>= "v0.17" & < "v0.18"}
+  "sherlodoc" {with-doc & >= "0.2"}
   "odoc" {with-doc}
 ]
 build: [
